# sillyfmt

./: .gitignore  Cargo.toml  README.md
sillyfmt/: Cargo.toml
sillyfmt-cli/: Cargo.toml
sillyfmt-fuzz/: Cargo.toml
sillyfmt-fuzz/src/: main.rs
sillyfmt-tree-sitter/: Cargo.toml  build.rs
sillyfmt-tree-sitter/src/: lib.rs
sillyfmt-wasm/: Cargo.toml  LICENSE_MIT
sillyfmt-wasm/src/: lib.rs  main.rs
sillyfmt-wasm/static/: index.html  tree-sitter-sillyfmt.wasm
sillyfmt-wasm/www/: index.html  index.js  package-lock.json  package.json
sillyfmt/src/: grammar.lalrpop  grammar.rs  lib.rs
src/: lib.rs
tree-sitter-sillyfmt/: binding.gyp  grammar.js  index.js  log.html  package-lock.json  package.json  tree-sitter-sillyfmt.wasm
tree-sitter-sillyfmt/corpus/: statements.txt
tree-sitter-sillyfmt/src/: binding.cc  grammar.json  node-types.json  parser.c
