[package]
name = "sillyfmt-fuzz"
version = "0.1.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.4"
sillyfmt = { path = "../sillyfmt" }
sillyfmt-tree-sitter = { path = "../sillyfmt-tree-sitter" }
